# sd_chat

./: .gitignore  README.md  README_ja.md  main_ui.py  pyproject.toml  run.py  sd_chat.py
settings_default/: settings.json
src/: sdapi_webui.py  settings.py
src/sd_chat/: __init__.py  civitai.py  sd_chat.py  sd_chat_mcp.py  sdapi_diffusers.py  sdapi_webui.py  sdapi_webui_client.py  settings.py  util.py
src/sd_chat/ui/: __init__.py  main_ui.py
src/sd_chat_ui/: main_ui.py
