[project]
name = "sd-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.4.1",
    "aiohttp>=3.11.10",
    "webuiapi>=0.9.16",
    "fastapi>=0.115.6",
    "uvicorn>=0.33.0",
    "gradio>=5.9.1",
]

[project.optional-dependencies]
diffusers = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "diffusers[torch]>=0.31.0",
    "transformers>=4.47.1",
    "peft>=0.14.0",
]

[project.scripts]
sd-chat-mcp = "sd_chat:main"
sd-chat-ui = "sd_chat_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu118", marker = "platform_system != 'Darwin'"},
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
